--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -580,3 +580,7 @@ div.date-range-box input {
 .tickLabels {
   font-size: xx-small !important;
 }
+
+#hover-popup {
+  z-index: 10000 !important;
+}
